Updated garbage collection JVM options for Java 9